--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
+    "react-typical": "^0.1.3",
     "react-vertical-timeline-component": "^3.6.0",
     "sass": "^1.77.4",
     "three": "^0.170.0",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-typical": "^0.1.2",
     "@types/react-vertical-timeline-component": "^3.3.6",
     "gh-pages": "^5.0.0"
   }
